client/src/style.css
/* ... */
.sjpp-track, .sjpp-track li {
    display: grid !important;
    grid-template-columns: 2fr 4fr 40px;
    grid-template-areas: 'image header' 'image blurb';
    gap: 5px;
}

.sjpp-app-drawer-card,
.sjpp-track {
    background-color: white;
    max-width: 400px;
    /* min-width: 320px; */
    border-radius: 5px;
    padding: 0px;
    align-items: center;
    justify-items: left;
    box-shadow: 0 1px 2px rgba(0, 0, 0, 0.1);
    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.sjpp-app-drawer-card::after,
.sjpp-track::after {
    content: "";
    border-radius: 8px;
    position: absolute;
    z-index: -1;
    top: 0;
    left: 0;
    width: 100%;
    height: 100%;
    box-shadow: 0 5px 15px rgba(0, 0, 0, 0.3);
    opacity: 0;
    -webkit-transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
    transition: all 0.6s cubic-bezier(0.165, 0.84, 0.44, 1);
}

.sjpp-app-drawer-card:hover,
.sjpp-track:hover {
    -webkit-transform: scale(1, 1);
    transform: scale(1, 1);
}

.sjpp-app-drawer-card:hover::after,
.sjpp-track:hover::after {
    opacity: 1;
}

.sjpp-track-image {
    grid-area: image;
    width: 75px;
    height: 75px;
    align-self: start;
    justify-self: start;
}

.sjpp-track-image img {
    width: 100%;
    height: 100%;
    object-fit: cover;
    border-radius: 5px 0px 0px 5px;
}

.sjpp-app-drawer-card-ribbon{
    grid-area: image;
    overflow: hidden;
    width: 100%;
    height: 100%;
}
.sjpp-app-drawer-card-ribbon::before,
.sjpp-app-drawer-card-ribbon::after {
  position: relative;
  z-index: -1;
  content: '';
  display: block;
  border-top-color: transparent;
  border-left-color: transparent;
}
.sjpp-app-drawer-card-ribbon span {
  position: relative;
  display: block;
  width: 100%;
  padding: 1px 0;
  border-color: transparent transparent transparent darkgray;
  box-shadow: 0 2px 7.5px rgba(0, 0, 0, 0.3);
  opacity: 1;
  font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
  transform: rotate(-45deg);
}

.sjpp-app-drawer-card-ribbon::before {
    top: 0;
    right: 0;
}
.sjpp-app-drawer-card-ribbon::after {
    bottom: 0;
    left: 0;
}

.sjpp-track-h {
    grid-area: header;
    font-family: 'Lucida Sans', 'Lucida Sans Regular', 'Lucida Grande', 'Lucida Sans Unicode', Geneva, Verdana, sans-serif;
    margin-left: 5px;
    padding: 0px;
}

.sjpp-track-blurb {
    grid-area: blurb;
    font-size: 13px;
    font-weight: 300;
    margin-left: 5px;
    justify-content: center;
    font-style: oblique;
    color: #403f3f;
}

/* client/src/block.js start */
.sjpp-active-tiny-button {
	display: inline-block;
	background-color: #1C5E86;
	font-size: .8em;
	color: white;
	padding: 1px 5px;
	margin-right: 5px;
	border-radius: 4px;
}

.sjpp-plus-button
{
    display: inline-block;
    margin: 1px;
    border: solid 1px #545454;
    font-size: .9em;
    cursor: default;
    padding: 2px 5px;
}

.sjpp-dshandleholder
{
    display: inline-block;
    margin: 1px;
    border: solid 1px #545454;
    font-size: .9em;
    cursor: default;
}

.sjpp-dslabel
{
    display: inline-block;
    color: black;
    padding: 2px 4px;

}
/* client/src/block.js end */


/* client/src/app.js start */
.sjpp-input-div-gene-pos
{
    display: inline-block;
    padding-right: 5px;
}

.sjpp-input-gene-pos
{
    border: solid 1px #545454;
    padding: 6px 10px;
    border-radius: 5px;
}

.sjpp-genome-select-div
{
    display: inline-block;
    padding-left: 5px;
}

.sjpp-genome-select
{
    border-radius: 5px;
    margin: 1px 20px 1px 10px;
}

.sjpp-output-sandbox-title
{
    border-radius:4px; 
    color:white; 
    background-color: #969696; 
    padding: 1px 5px; 
    display:inline-block; 
    font-size:0.8em; 
    margin-left:4px;
}
/* client/src/app.js end */

/* client/dom/sandbox.ts start */
.sjpp-output-sandbox-header
{
    display: inline-block;
    margin: 5px 10px;
    padding-right: 8px;
    margin-bottom: 0px;
    /* box-shadow:2px 0px 2px #f2f2f2; */
    border-radius: 5px 5px 0 0;
    /* background-color: #f2f2f2; */
    z-index: 99;
}

.sjpp-output-sandbox-content
{
    margin: 5px 10px;
    margin-top: 0px;
    padding-right: 8px;
    display: inline-block;
    /* box-shadow: 2px 2px 10px #f2f2f2; */
    border: solid 1px #ccc;
    border-top: solid 1px white;
    border-radius: 0  0 5px 5px;
}

.sjpp-output-sandbox-collapse-btn,
.sjpp-output-sandbox-expand-btn,
.sjpp-output-sandbox-close-bt
{
    /* display: inline-block; */
    /* margin: 0px; */
    /* border-right: solid 2px white; */
    font-size: 16px;
    cursor: default;
}

.sjpp-output-sandbox-close-bt {
    border-radius: 5px 0 0 0;
}

/* 
Separated padding for sandbox buttons to fix close button's
right, white border not extending to total height of
sandbox header
*/
.sjpp-output-sandbox-collapse-btn,
.sjpp-output-sandbox-expand-btn {
    padding: 4px 10px;
}

.sjpp-output-sandbox-close-bt {
    padding: 8px 10px;
}
/* client/dom/sandbox.ts end */


.sjpp_row_wrapper:hover {
    background: #fcfcca !important; 
}
/*.sjpp_row_wrapper:nth-child(odd) {background: rgb(237, 237, 237)}*/

.sjpp_table_header {
    font-family: 'Arial';
    font-size: 1em;
    text-align: left;
    position: sticky;
    top: 0;
    opacity: 0.7;
    font-weight: normal;
}

.sjpp_table_item {
    padding: 3px 5px;
    font-size: 1em;
    text-align: left;
}

.sjpp_show_scrollbar{
    overflow-y: scroll;
    overflow-x: scroll;

}

.sjpp_show_scrollbar::-webkit-scrollbar{
    background-color: white;
    border-radius: 10px;
    width: 18px;
}

/* This will handle the thumb (scrolling part) */
.sjpp_show_scrollbar::-webkit-scrollbar-thumb{
    background-color: grey;
    border-radius: 10px;
    border: 5px solid white;

}

.sjpp_show_scrollbar::-webkit-scrollbar-thumb:vertical{
    height: 18px!important;
    width: 18px;
}
/* ... */

